modified structure for dashboard integration